# Squally

./: .cocos-project.json  .gitattributes  .gitignore  .gitmodules  .itch.toml  CMakeLists.template  CMakeLists.txt  CMakeLists.wip  CMakeSettings.json  CheckIncludes.py  CopyResources.py  GenerateCMakeFiles.py  GenerateDataFiles.py  GenerateResources.py  GenerateResources.py.orig  PostBuildMac.sh  README.md  Resources.rc  Squally.sln  Squally.vcxproj  Squally.vcxproj.filters  SquallyResources.csproj  SqualrTutorial.sln  SqualrTutorial.vcxproj  SqualrTutorial.vcxproj.filters  SqualrTutorialResources.csproj  dep.py  no_steam.txt  package-lock.json  package.json  packages.config  requirements.json  requirements.txt  steam_appid.txt
Launcher/: CMakeLists.txt
Source/: AppDelegate.cpp  AppDelegate.h  Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  Config.h.in  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  GenerateResources.py  HelloWorldScene.cpp  HelloWorldScene.h  RCa02248  Resources.cpp  Resources.cpp.orig  Resources.h  Resources.h.orig  Resources.rc  Resources.t  Resources.tt  Window.cpp  Window.h  main.cpp  main.h  manifest.cmake  precheader_squally.cpp  precheader_squally.h
Source/Analytics/: AnalyticsCategories.cpp  AnalyticsCategories.h
Source/Collision/: CategoryGroup.h  Collision.cpp  Collision.h  CollisionGroup.h  CollisionGroups.cpp  CollisionGroups.h  CollisionManager.cpp  CollisionManager.h  CollisionObject.cpp  CollisionObject.h  TileCollision.cpp  TileCollision.h
Source/Config/: ConfigManager.cpp  ConfigManager.h  SoundManager.cpp  SoundManager.h
Source/Deserializers/: CollisionDeserializer.cpp  CollisionDeserializer.h  DecorDeserializer.h  Deserializers.h  EntityDeserializer.cpp  EntityDeserializer.h  EnvironmentDeserializer.cpp  EnvironmentDeserializer.h  GenericObjectDeserializer.cpp  GenericObjectDeserializer.h  ObjectDeserializer.h  ParallaxDeserializer.h  TileDeserializer.cpp  TileDeserializer.h  WeatherDeserializer.cpp  WeatherDeserializer.h
Source/EffectSprite/: Effect.cpp  Effect.h  EffectSprite.cpp  EffectSprite.h  LightEffect.cpp  LightEffect.h
Source/Engine/: EngineBootstrapper.cpp  EngineBootstrapper.h  GlobalDirector.cpp  GlobalDirector.h  GlobalHud.cpp  GlobalHud.h  GlobalNode.cpp  GlobalNode.h  GlobalScene.cpp  GlobalScene.h  SmartNode.cpp  SmartNode.h  SmartScene.cpp  SmartScene.h
Source/Entities/: Enemy.cpp  Enemy.h  Entities.h  Entity.cpp  Entity.h  EntityDeserializer.cpp  EntityDeserializer.h  Player.cpp  Player.h
Source/Events/: CipherEvents.cpp  CipherEvents.h  CombatEvents.cpp  CombatEvents.h  DeserializationEvents.cpp  DeserializationEvents.h  DialogEvents.cpp  DialogEvents.h  DialogueEvents.cpp  DialogueEvents.h  HackableEvents.cpp  HackableEvents.h  HelperEvents.cpp  HelperEvents.h  HexusEvents.cpp  HexusEvents.h  MouseEvents.cpp  MouseEvents.h  NavigationEvents.cpp  NavigationEvents.h  NotificationEvents.cpp  NotificationEvents.h  PauseEvents.cpp  PauseEvents.h  PlatformerEvents.cpp  PlatformerEvents.h  PointerTraceEvents.cpp  PointerTraceEvents.h  ShopEvents.cpp  ShopEvents.h  SqualrEvents.cpp  SqualrEvents.h  SwitchEvents.cpp  SwitchEvents.h
Source/Fight/: Fight.cpp  Fight.h
Source/GUI/: MenuLabel.cpp  MenuLabel.h  MenuSprite.cpp  MenuSprite.h  Mouse.cpp  Mouse.h
Source/Input/: InputManager.cpp  InputManager.h
Source/Level/: Background.cpp  Background.h  Level.cpp  Level.h  LevelCamera.cpp  LevelCamera.h  LevelEditor.cpp  LevelEditor.h  LevelLights.cpp  LevelLights.h  LevelMap.cpp  LevelMap.h  LevelParser.cpp  LevelParser.h  TileCollision.cpp  TileCollision.h
Source/Menus/: CursorSets.cpp  CursorSets.h  MenuBackground.cpp  MenuBackground.h  MinigamesMenu.cpp  MinigamesMenu.h  TakeOverMenu.cpp  TakeOverMenu.h
Source/Minigames/: Bejeweled.cpp  Bejeweled.h  Minigames.h
Source/Music/: TrackDeserializer.cpp  TrackDeserializer.h  Tracks.h
Source/Objects/: CameraFocus.cpp  CameraFocus.h  CameraScrollTracker.cpp  CameraScrollTracker.h  DecorDeserializer.cpp  DecorDeserializer.h  DecorObject.cpp  DecorObject.h  EggProjectile.cpp  EggProjectile.h  EnvironmentDeserializer.cpp  GameObject.cpp  GameObject.h  GenericObjectDeserializer.cpp  GenericObjectDeserializer.h  GenericObjects.h  IngameObject.cpp  IngameObject.h  InstructionTest.cpp  InstructionTest.h  Monitor.cpp  Monitor.h  ObjectDeserializer.cpp  ObjectDeserializer.h  Objects.h  ParallaxDeserializer.cpp  ParallaxObject.cpp  ParallaxObject.h  SerializableLayer.cpp  SerializableLayer.h  SerializableObject.cpp  SerializableObject.h  WarpGate.cpp  WarpGate.h  WarpGateExactScanTutorial.cpp  WarpGateExactScanTutorial.h
Source/Resources/: BackgroundResources.cpp  BackgroundResources.h  CipherResources.cpp  CipherResources.h  CutsceneResources.cpp  CutsceneResources.h  DecorResources.cpp  DecorResources.h  EntityResources.cpp  EntityResources.h  FXResources.cpp  FXResources.h  FontResources.cpp  FontResources.h  HexusResources.cpp  HexusResources.h  IsometricEntityResources.cpp  IsometricEntityResources.h  IsometricMapResources.cpp  IsometricMapResources.h  IsometricObjectResources.cpp  IsometricObjectResources.h  ItemResources.cpp  ItemResources.h  MapResources.cpp  MapResources.h  MusicResources.cpp  MusicResources.h  ObjectResources.cpp  ObjectResources.h  ParticleResources.cpp  ParticleResources.h  PointerTraceResources.cpp  PointerTraceResources.h  ShaderResources.cpp  ShaderResources.h  SoundResources.cpp  SoundResources.h  StringResources.cpp  StringResources.h  (+6 more)
Source/Save/: SaveManager.cpp  SaveManager.h
Source/Scenes/: MapBase.cpp  MapBase.h  SceneDirector.cpp  SceneDirector.h
Source/Shaders/: PostProcess.cpp  PostProcess.h  ShaderUtils.cpp
Source/Sound/: MusicDeserializer.cpp  MusicDeserializer.h  MusicLayer.h
Source/Strings/: Empty.cpp  Empty.h  LateBound.cpp  LateBound.h  Strings.h
Source/Terrain/: BlueGrassTerrain.cpp  BlueGrassTerrain.h  CastleTerrain.cpp  CastleTerrain.h  CaveTerrain.cpp  CaveTerrain.h  CavernsTerrain.cpp  CavernsTerrain.h  DarkGrassTerrain.cpp  DarkGrassTerrain.h  DryGrassTerrain.cpp  DryGrassTerrain.h  DryTerrain.cpp  (+32 more)
(+21771 files in other folders)
